app3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: everly-app-3
spec:
  selector:
    matchLabels:
      app: everly-app-3
  template:
    metadata:
      labels:
        app: everly-app-3
    spec:
      containers:
      - name: everly-app-3
        image: nginx # yeasy/simple-web:latest  #Random image from docakerhub
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
