app3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: everly-app-3
spec:
  # type: NodePort
  selector:
    app: everly-app-3
  ports:
    - port: 80
      # targetPort: 80
      # nodePort: 30007
